[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0.0-beta", features = [] }

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
tauri = { version = "^2.0.0-beta", features = ["default", "rustls-tls", "macos-private-api"] }
tauri-plugin-http = {version = "^2.0.0-beta", features = ["rustls-tls"] }
tauri-plugin-static-file-server = {path = "../plugins/static-file-server" }

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "^2.0.0-beta"
