[package]
name = "tauri-plugin-tcp-client"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-tcp-client"

[dependencies]
tauri = { version = "2.0.0-beta.5" }
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["macros","net"] }

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.4", features = ["build"] }
